Fixed right white space bug. Structured base.css

--- a/base.css
+++ b/base.css
@@ -1,21 +1,26 @@
 html,body {width: auto;} 
 
-      #right-tab-header { background-color: skyblue;  }
-
-      @media only screen and (width: 767px){
-        #right-tab-header { height: 5%; }
-      }
-
-      div > i { width: 100%; max-width: 4px; }
-
-      @media only screen and (max-width: 1199px){
-        #right-tab-header { height: 12%; }
-      }
-
-      
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&subset=cyrillic,cyrillic-ext');
-
 body {
     font-family: 'Open Sans', sans-serif !important;
     font-weight: 400;
   }
+
+  div > i { width: 100%; max-width: 4px; }
+
+    @media only screen and (width: 767px){
+        #right-tab-header { height: 5%; }
+    }
+
+      
+    @media only screen and (max-width: 1199px){
+        #right-tab-header { height: 12%; }
+    }
+      
+    @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&subset=cyrillic,cyrillic-ext');
+
+
+
+  .contact-info { font-size: 11px; }
+  
+  .right-tab-header { background-color: skyblue;  }
+  
